--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,10 @@
       "js": ["jquery.js", "script.js"]
     }
   ],
-  "manifest_version": 2  
+  "manifest_version": 2,
+  "icons":{
+  	"16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
