--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My extension",
+  "name": "Press buttons!",
   "description": "An example chrome extension that injects buttons",
-  "version": "0.0.1",  
+  "version": "0.0.2",  
   "content_scripts": [
     {
       "matches": ["http://*/*"],
@@ -11,8 +11,8 @@
   ],
   "manifest_version": 2,
   "icons":{
-  	"16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+  	"16": "16.png",
+    "48": "48.png",
+    "128": "128.png"
   }
 }
